# safe-download-pythorch-models

./: .gitignore  CHANGELOG.md  README.md  datasets.py  downloader.py  pyproject.toml  test_torchget.py
examples/: 01_quickstart.py  02_visualize_cifar10.py  03_custom_transforms.py  04_low_level_download.py  README.md
torchget/: __init__.py  datasets.py  registry.py
