[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchget"
version = "0.1.0"
description = "Resilient dataset downloader for PyTorch — resume, retry, verify."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pytorch", "dataset", "download", "resume", "cifar"]
dependencies = [
    "requests>=2.28",
    "tqdm>=4.64",
    "torchvision>=0.14",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses"]

[tool.setuptools.packages.find]
where = ["."]
include = ["torchget*"]
